steering_functions: 1.0.1-0 in 'kinetic/lcas-dist.yaml' [bloom]

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -430,6 +430,11 @@ repositories:
       version: master
     status: maintained
   steering_functions:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/lcas-releases/steering_functions.git
+      version: 1.0.1-0
     source:
       test_commits: true
       type: git
