add python-opengl for Artful and Bionic

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1945,6 +1945,8 @@ python-opengl:
       packages: [PyOpenGL]
   slackware: [PyOpenGL]
   ubuntu:
+    artful: [python-opengl]
+    bionic: [python-opengl]
     lucid: [python-opengl]
     maverick: [python-opengl]
     natty: [python-opengl]
