--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3260,6 +3260,8 @@ python-sphinx:
     pip:
       packages: [Sphinx]
   ubuntu:
+    artful: [python-sphinx]
+    bionic: [python-sphinx]
     lucid: [python-sphinx]
     maverick: [python-sphinx]
     natty: [python-sphinx]
