--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -703,6 +703,16 @@ repositories:
       url: https://github.com/ros/ros_comm_msgs.git
       version: indigo-devel
     status: maintained
+  ros_control:
+    doc:
+      type: git
+      url: https://github.com/ros-controls/ros_control.git
+      version: melodic-devel
+    source:
+      type: git
+      url: https://github.com/ros-controls/ros_control.git
+      version: melodic-devel
+    status: maintained
   ros_emacs_utils:
     doc:
       type: git
