python-sklearn-deap-pip: add package in python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3198,6 +3198,13 @@ python-sklearn:
     vivid: [python-sklearn]
     wily: [python-sklearn]
     xenial: [python-sklearn]
+python-sklearn-deap-pip:
+  debian:
+    pip:
+      packages: [python-sklearn-deap]
+  ubuntu:
+    pip:
+      packages: [python-sklearn-deap]
 python-slackclient-pip:
   debian:
     pip:
