python-fastdtw-pip: add package in python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -963,6 +963,13 @@ python-falcon:
   fedora: [python-falcon]
   gentoo: [dev-python/falcon]
   ubuntu: [python-falcon]
+python-fastdtw-pip:
+  debian:
+    pip:
+      packages: [python-fastdtw]
+  ubuntu:
+    pip:
+      packages: [python-fastdtw]
 python-fcn-pip:
   debian:
     pip:
