--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3145,7 +3145,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/at-wat/hokuyo3d.git
-      version: indigo-devel
+      version: master
     release:
       tags:
         release: release/kinetic/{package}/{version}
@@ -3154,7 +3154,7 @@ repositories:
     source:
       type: git
       url: https://github.com/at-wat/hokuyo3d.git
-      version: indigo-devel
+      version: master
     status: developed
   homer_mapping:
     release:
