--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3145,16 +3145,16 @@ repositories:
     doc:
       type: git
       url: https://github.com/at-wat/hokuyo3d.git
-      version: indigo-devel
+      version: master
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/at-wat/hokuyo3d-release.git
-      version: 0.1.1-0
+      version: 0.2.0-0
     source:
       type: git
       url: https://github.com/at-wat/hokuyo3d.git
-      version: indigo-devel
+      version: master
     status: developed
   homer_mapping:
     release:
