hokuyo3d: 0.2.0-0 in 'lunar/distribution.yaml' [bloom]

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1094,6 +1094,21 @@ repositories:
       url: https://github.com/ros-drivers/gscam.git
       version: master
     status: unmaintained
+  hokuyo3d:
+    doc:
+      type: git
+      url: https://github.com/at-wat/hokuyo3d.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/at-wat/hokuyo3d-release.git
+      version: 0.2.0-0
+    source:
+      type: git
+      url: https://github.com/at-wat/hokuyo3d.git
+      version: master
+    status: developed
   ifopt:
     doc:
       type: git
