Add libcreate to documentation index for lunar

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1456,6 +1456,16 @@ repositories:
       url: https://github.com/ros-perception/laser_pipeline.git
       version: hydro-devel
     status: maintained
+  libcreate:
+    doc:
+      type: git
+      url: https://github.com/AutonomyLab/libcreate.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/AutonomyLab/libcreate.git
+      version: master
+    status: developed
   libfreenect:
     doc:
       type: git
