add rosmon for melodic (source + doc + PR testing)

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -845,6 +845,17 @@ repositories:
       url: https://github.com/ros/roslisp.git
       version: master
     status: maintained
+  rosmon:
+    doc:
+      type: git
+      url: https://github.com/xqms/rosmon.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/xqms/rosmon.git
+      version: master
+    status: maintained
   rospack:
     doc:
       type: git
