--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -3157,6 +3157,17 @@ repositories:
       url: https://github.com/ros/roslisp_common.git
       version: master
     status: developed
+  rosmon:
+    doc:
+      type: git
+      url: https://github.com/xqms/rosmon.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/xqms/rosmon.git
+      version: master
+    status: maintained
   rospack:
     doc:
       type: git
