Add yaml-cpp for artful and bionic

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4906,6 +4906,8 @@ yaml-cpp:
   rhel: [yaml-cpp-devel]
   slackware: [yaml-cpp]
   ubuntu:
+    artful: [libyaml-cpp-dev]
+    bionic: [libyaml-cpp-dev]
     lucid: [yaml-cpp0.2.6-dev]
     maverick: [yaml-cpp0.2.6-dev]
     natty: [yaml-cpp0.2.6-dev]
