--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7784,13 +7784,21 @@ repositories:
       packages:
       - cm_740_module
       - op3_action_module
+      - op3_balance_control
+      - op3_base_module
+      - op3_direct_control_module
       - op3_head_control_module
       - op3_kinematics_dynamics
+      - op3_localization
+      - op3_manager
+      - op3_online_walking_module
+      - op3_walking_module
       - open_cr_module
+      - robotis_op3
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ROBOTIS-GIT-release/ROBOTIS-OP3-release.git
-      version: 0.1.1-0
+      version: 0.2.0-0
     source:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3.git
