--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7804,6 +7804,25 @@ repositories:
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3.git
       version: kinetic-devel
     status: developed
+  robotis_op3_common:
+    doc:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Common.git
+      version: kinetic-devel
+    release:
+      packages:
+      - op3_description
+      - op3_gazebo
+      - robotis_op3_common
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ROBOTIS-GIT-release/ROBOTIS-OP3-Common-release.git
+      version: 0.1.1-0
+    source:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Common.git
+      version: kinetic-devel
+    status: developed
   robotis_op3_msgs:
     doc:
       type: git
