Added libb64-dev to base.yaml

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1390,6 +1390,12 @@ libavahi-core-dev:
   fedora: [avahi-devel]
   gentoo: [net-dns/avahi]
   ubuntu: [libavahi-core-dev]
+libb64-dev:
+  arch: [libb64]
+  debian: [libb64-dev]
+  fedora: [libb64-devel]
+  gentoo: [libb64]
+  ubuntu: [libb64-dev]
 libbison-dev:
   debian: [libbison-dev]
   fedora: [bison-devel]
