--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -708,6 +708,23 @@ repositories:
       type: git
       url: https://github.com/ros-controls/ros_control.git
       version: melodic-devel
+    release:
+      packages:
+      - combined_robot_hw
+      - combined_robot_hw_tests
+      - controller_interface
+      - controller_manager
+      - controller_manager_msgs
+      - controller_manager_tests
+      - hardware_interface
+      - joint_limits_interface
+      - ros_control
+      - rqt_controller_manager
+      - transmission_interface
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/ros_control-release.git
+      version: 0.14.0-0
     source:
       type: git
       url: https://github.com/ros-controls/ros_control.git
