Added dialogflow_ros to the documentation index for kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1795,6 +1795,11 @@ repositories:
       url: https://github.com/ros/diagnostics.git
       version: indigo-devel
     status: maintained
+  dialogflow_ros:
+    doc:
+      type: git
+      url: https://github.com/piraka9011/dialogflow_ros.git
+      version: kinetic-devel
   dnn_detect:
     doc:
       type: git
