Added dialogflow_ros to the documentation index for kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1800,6 +1800,11 @@ repositories:
       type: git
       url: https://github.com/piraka9011/dialogflow_ros.git
       version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/piraka9011/dialogflow_ros.git
+      version: kinetic-devel
+    status: developed
   dnn_detect:
     doc:
       type: git
