--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2572,6 +2572,8 @@ libqglviewer-qt4:
   gentoo: ['x11-libs/libQGLViewer:0/qt4-2']
   macports: [libQGLViewer]
   ubuntu:
+    artful: [libqglviewer2-qt4]
+    bionic: [libqglviewer2-qt4]
     lucid: [libqglviewer-qt4-2]
     maverick: [libqglviewer-qt4-2]
     natty: [libqglviewer-qt4-2]
@@ -2597,6 +2599,8 @@ libqglviewer-qt4-dev:
   fedora: [libQGLViewer-devel]
   gentoo: ['x11-libs/libQGLViewer:0/qt4-2']
   ubuntu:
+    artful: [libqglviewer-dev-qt4]
+    bionic: [libqglviewer-dev-qt4]
     lucid: [libqglviewer-qt4-dev]
     maverick: [libqglviewer-qt4-dev]
     natty: [libqglviewer-qt4-dev]
