Update base.yaml to include debian entry
Added debian, fedora, gentoo entries for new apache2 dependency

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -43,6 +43,9 @@ antlr:
   gentoo: [dev-java/antlr]
   ubuntu: [antlr, libantlr-dev]
 apache2:
+  debian: [apache2]
+  fedora: [httpd]
+  gentoo: [apache]
   ubuntu: [apache2]
 apache2-mpm-prefork:
   debian:
