specify category for gentoo: https://packages.gentoo.org/packages/www-servers/apache

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -45,7 +45,7 @@ antlr:
 apache2:
   debian: [apache2]
   fedora: [httpd]
-  gentoo: [apache]
+  gentoo: [www-servers/apache]
   ubuntu: [apache2]
 apache2-mpm-prefork:
   debian:
