added apache2 entry to file rosdep/base.yaml (#17196)
* added apache2 entry to file rosdep/base.yaml

* Update base.yaml to include debian entry

Added debian, fedora, gentoo entries for new apache2 dependency

* specify category for gentoo: https://packages.gentoo.org/packages/www-servers/apache

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -42,6 +42,11 @@ antlr:
   fedora: [antlr3-C, antlr-C++]
   gentoo: [dev-java/antlr]
   ubuntu: [antlr, libantlr-dev]
+apache2:
+  debian: [apache2]
+  fedora: [httpd]
+  gentoo: [www-servers/apache]
+  ubuntu: [apache2]
 apache2-mpm-prefork:
   debian:
     jessie: [apache2-mpm-prefork]
