[rosdep][py] Adds svgwrite & svgpathtools
Adds python-svgwrite and svgpathtools for ubuntu.

svgpathtools
============

svgpathtools is a collection of tools for manipulating and analyzing SVG
Path objects and Bézier curves.

svgwrite
========

A Python library to create SVG drawings.

[ Descriptions from pypi.python.org ]

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3332,6 +3332,10 @@ python-support:
     pip:
       packages: []
   ubuntu: [python-support]
+python-svgpathtools:
+  ubuntu: [python-svgpathtools]
+python-svgwrite:
+  ubuntu: [python-svgwrite]
 python-svn:
   debian: [python-svn]
   fedora: [pysvn]
