Adding python-werkzeug package for arch OS.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3828,6 +3828,7 @@ python-webtest:
   gentoo: [dev-python/webtest]
   ubuntu: [python-webtest]
 python-werkzeug:
+  arch: [python-werkzeug]
   debian: [python-werkzeug]
   fedora: [python-werkzeug]
   gentoo: [dev-python/werkzeug]
