Adding force_torque_tools to documentation index for kinnetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2387,6 +2387,25 @@ repositories:
       url: https://github.com/danielsnider/follow_waypoints.git
       version: master
     status: maintained
+  force_torque_tools:
+    doc:
+      type: git
+      url: https://github.com/kth-ros-pkg/force_torque_tools.git
+      version: kinetic
+    release:
+      packages:
+      - force_torque_sensor_calib
+      - force_torque_tools
+      - gravity_compensation
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-gbp/force_torque_tools-release.git
+      version: 1.2.0-0
+    source:
+      type: git
+      url: https://github.com/kth-ros-pkg/force_torque_tools.git
+      version: indigo
+    status: maintained
   four_wheel_steering_msgs:
     doc:
       type: git
