--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2392,19 +2392,10 @@ repositories:
       type: git
       url: https://github.com/kth-ros-pkg/force_torque_tools.git
       version: kinetic
-    release:
-      packages:
-      - force_torque_sensor_calib
-      - force_torque_tools
-      - gravity_compensation
-      tags:
-        release: release/kinetic/{package}/{version}
-      url: https://github.com/ros-gbp/force_torque_tools-release.git
-      version: 1.2.0-0
     source:
       type: git
       url: https://github.com/kth-ros-pkg/force_torque_tools.git
-      version: indigo
+      version: kinetic
     status: maintained
   four_wheel_steering_msgs:
     doc:
