--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2387,6 +2387,16 @@ repositories:
       url: https://github.com/danielsnider/follow_waypoints.git
       version: master
     status: maintained
+  force_torque_tools:
+    doc:
+      type: git
+      url: https://github.com/kth-ros-pkg/force_torque_tools.git
+      version: kinetic
+    source:
+      type: git
+      url: https://github.com/kth-ros-pkg/force_torque_tools.git
+      version: kinetic
+    status: maintained
   four_wheel_steering_msgs:
     doc:
       type: git
