--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10692,11 +10692,13 @@ repositories:
     release:
       packages:
       - thormang3_manipulation_demo
+      - thormang3_ppc
       - thormang3_sensors
+      - thormang3_walking_demo
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ROBOTIS-GIT-release/ROBOTIS-THORMANG-PPC-release.git
-      version: 0.1.2-0
+      version: 0.2.0-0
     source:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC.git
