Modified status and test_pull_requests option of ROBOTIS's packages

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1928,7 +1928,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/DynamixelSDK.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   dynpick_driver:
     doc:
       type: git
@@ -3150,7 +3150,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/hls_lfcd_lds_driver.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   hls-lfom-tof-driver:
     doc:
       type: git
@@ -4573,7 +4573,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   mapviz:
     doc:
       type: git
@@ -6080,7 +6080,6 @@ repositories:
       url: https://github.com/ROBOTIS-GIT-release/open_manipulator-release.git
       version: 0.1.1-0
     source:
-      test_pull_requests: true
       type: git
       url: https://github.com/ROBOTIS-GIT/open_manipulator.git
       version: kinetic-devel
@@ -7759,7 +7758,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-Framework-msgs.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   robotis_framework:
     doc:
       type: git
@@ -7779,7 +7778,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-Framework.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   robotis_math:
     doc:
       type: git
@@ -7794,7 +7793,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-Math.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   robotis_op3:
     doc:
       type: git
@@ -7882,7 +7881,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-Utility.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   robotnik_msgs:
     doc:
       type: git
@@ -10597,7 +10596,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Common.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   thormang3_mpc:
     doc:
       type: git
@@ -10627,7 +10626,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   thormang3_mpc_sensors:
     doc:
       type: git
@@ -10668,7 +10667,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-msgs.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   thormang3_opc:
     doc:
       type: git
@@ -10683,7 +10682,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   thormang3_ppc:
     doc:
       type: git
@@ -10701,7 +10700,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   thormang3_tools:
     doc:
       type: git
@@ -10716,7 +10715,7 @@ repositories:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Tools.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   timesync_ros:
     doc:
       type: git
@@ -10835,11 +10834,10 @@ repositories:
       url: https://github.com/ROBOTIS-GIT-release/turtlebot3-release.git
       version: 0.2.1-0
     source:
-      test_pull_requests: true
       type: git
       url: https://github.com/ROBOTIS-GIT/turtlebot3.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   turtlebot3_applications:
     doc:
       type: git
@@ -10893,11 +10891,10 @@ repositories:
       url: https://github.com/ROBOTIS-GIT-release/turtlebot3_msgs-release.git
       version: 0.1.5-0
     source:
-      test_pull_requests: true
       type: git
       url: https://github.com/ROBOTIS-GIT/turtlebot3_msgs.git
       version: kinetic-devel
-    status: maintained
+    status: developed
   turtlebot3_simulations:
     doc:
       type: git
@@ -10913,7 +10910,6 @@ repositories:
       url: https://github.com/ROBOTIS-GIT-release/turtlebot3_simulations-release.git
       version: 0.2.4-0
     source:
-      test_pull_requests: true
       type: git
       url: https://github.com/ROBOTIS-GIT/turtlebot3_simulations.git
       version: kinetic-devel
