--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -327,6 +327,7 @@ repositories:
       url: https://github.com/ros-gbp/cartographer_ros-release.git
       version: 0.2.0-0
     source:
+      test_commits: false
       type: git
       url: https://github.com/googlecartographer/cartographer_ros.git
       version: master
