--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -312,6 +312,26 @@ repositories:
       url: https://github.com/googlecartographer/cartographer.git
       version: master
     status: maintained
+  cartographer_ros:
+    doc:
+      type: git
+      url: https://github.com/googlecartographer/cartographer_ros.git
+      version: master
+    release:
+      packages:
+      - cartographer_ros
+      - cartographer_ros_msgs
+      - cartographer_rviz
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/cartographer_ros-release.git
+      version: 0.2.0-0
+    source:
+      test_commits: false
+      type: git
+      url: https://github.com/googlecartographer/cartographer_ros.git
+      version: master
+    status: maintained
   catkin:
     doc:
       type: git
