xacro: 1.13.0-0 in 'melodic/distribution.yaml' [bloom]

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1366,5 +1366,20 @@ repositories:
       url: https://github.com/ros-visualization/webkit_dependency.git
       version: kinetic-devel
     status: maintained
+  xacro:
+    doc:
+      type: git
+      url: https://github.com/ros/xacro.git
+      version: melodic-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/xacro-release.git
+      version: 1.13.0-0
+    source:
+      type: git
+      url: https://github.com/ros/xacro.git
+      version: melodic-devel
+    status: maintained
 type: distribution
 version: 2
