--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1381,6 +1381,21 @@ repositories:
       type: git
       url: https://github.com/Kukanani/vision_msgs.git
       version: melodic-devel
+  warehouse_ros:
+    doc:
+      type: git
+      url: https://github.com/ros-planning/warehouse_ros.git
+      version: jade-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/warehouse_ros-release.git
+      version: 0.9.0-0
+    source:
+      type: git
+      url: https://github.com/ros-planning/warehouse_ros.git
+      version: jade-devel
+    status: maintained
   webkit_dependency:
     doc:
       type: git
