--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1141,6 +1141,10 @@ python-gcloud-pip:
   ubuntu:
     pip:
       packages: [gcloud]
+python-gdal:
+  fedora: [python2-gdal]
+  ubuntu: [python-gdal]
+  debian: [python-gdal]
 python-gdown-pip:
   debian:
     pip:
