--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1144,6 +1144,7 @@ python-gcloud-pip:
 python-gdal:
   debian: [python-gdal]
   fedora: [python2-gdal]
+  gentoo: ['sci-libs/gdal[python]']
   ubuntu: [python-gdal]
 python-gdown-pip:
   debian:
