Added GDAL (with python bindings) (#17321)
* Added GDAL (with python bindings).

Tested on Ubuntu. Searched the package repositories for the other platforms.

* fix order of entries

* added gentoo

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1141,6 +1141,11 @@ python-gcloud-pip:
   ubuntu:
     pip:
       packages: [gcloud]
+python-gdal:
+  debian: [python-gdal]
+  fedora: [python2-gdal]
+  gentoo: ['sci-libs/gdal[python]']
+  ubuntu: [python-gdal]
 python-gdown-pip:
   debian:
     pip:
