Main Changes for ubuntu:bionic and melodic

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -116,6 +116,7 @@ assimp:
     xenial: [libassimp-dev]
     yakkety: [libassimp-dev]
     zesty: [libassimp-dev]
+    bionic: [libassimp-dev]
 assimp-dev:
   arch: [assimp]
   debian: [libassimp-dev]
@@ -140,6 +141,7 @@ assimp-dev:
     xenial: [libassimp-dev]
     yakkety: [libassimp-dev]
     zesty: [libassimp-dev]
+    bionic: [libassimp-dev]
 atlas:
   arch: [atlas-lapack]
   debian: [libatlas-base-dev]
@@ -455,6 +457,7 @@ collada-dom:
     xenial: [libcollada-dom2.4-dp-dev]
     yakkety: [libcollada-dom2.4-dp-dev]
     zesty: [libcollada-dom2.4-dp-dev]
+    bionic: [libcollada-dom2.4-dp-dev]
 comedi:
   debian: [libcomedi-dev]
   fedora: [comedilib-devel]
@@ -711,6 +714,7 @@ ffmpeg:
     xenial: [libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
     yakkety: [libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
     zesty: [libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
+    bionic: [libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
 ffmpeg2theora:
   arch: [ffmpeg2theora]
   debian: [ffmpeg2theora]
@@ -747,6 +751,7 @@ fltk:  # Consider using the libfltk-dev and fluid (fltk runtime) keys instead.
     vivid: [fluid, libfltk1.3-dev]
     wily: [fluid, libfltk1.3-dev]
     xenial: [fluid, libfltk1.3-dev]
+    bionic: [fluid, libfltk1.3-dev]
 fluid:
   arch: [fltk]
   debian: [libfltk1.1-dev]
@@ -1674,6 +1679,7 @@ libfltk-dev:
     xenial: [libfltk1.3-dev]
     yakkety: [libfltk1.3-dev]
     zesty: [libfltk1.3-dev]
+    bionic: [libfltk1.3-dev]
 libfontconfig1-dev:
   debian: [libfontconfig1-dev]
   fedora: [fontconfig-devel]
@@ -2045,6 +2051,7 @@ libjpeg:
     xenial: [libjpeg-dev]
     yakkety: [libjpeg-dev]
     zesty: [libjpeg-dev]
+    bionic: [libjpeg-dev]
 libjson-glib:
   arch: [json-glib]
   debian: [libjson-glib-dev]
@@ -2268,6 +2275,7 @@ libogre-dev:
     xenial: [libogre-1.9-dev]
     yakkety: [libogre-1.9-dev]
     zesty: [libogre-1.9-dev]
+    bionic: [libogre-1.9-dev]
 libois-dev:
   arch: [ois]
   debian: [libois-dev]
@@ -2386,6 +2394,7 @@ libpcl-all:
     xenial: [libpcl1.7]
     yakkety: [libpcl-apps1.8, libpcl-common1.8, libpcl-features1.8, libpcl-filters1.8, libpcl-io1.8, libpcl-kdtree1.8, libpcl-keypoints1.8, libpcl-ml1.8, libpcl-octree1.8, libpcl-outofcore1.8, libpcl-people1.8, libpcl-recognition1.8, libpcl-registration1.8, libpcl-sample-consensus1.8, libpcl-search1.8, libpcl-segmentation1.8, libpcl-stereo1.8, libpcl-surface1.8, libpcl-tracking1.8, libpcl-visualization1.8]
     zesty: [libpcl-apps1.8, libpcl-common1.8, libpcl-features1.8, libpcl-filters1.8, libpcl-io1.8, libpcl-kdtree1.8, libpcl-keypoints1.8, libpcl-ml1.8, libpcl-octree1.8, libpcl-outofcore1.8, libpcl-people1.8, libpcl-recognition1.8, libpcl-registration1.8, libpcl-sample-consensus1.8, libpcl-search1.8, libpcl-segmentation1.8, libpcl-stereo1.8, libpcl-surface1.8, libpcl-tracking1.8, libpcl-visualization1.8]
+    bionic: [libpcl-apps1.8, libpcl-common1.8, libpcl-features1.8, libpcl-filters1.8, libpcl-io1.8, libpcl-kdtree1.8, libpcl-keypoints1.8, libpcl-ml1.8, libpcl-octree1.8, libpcl-outofcore1.8, libpcl-people1.8, libpcl-recognition1.8, libpcl-registration1.8, libpcl-sample-consensus1.8, libpcl-search1.8, libpcl-segmentation1.8, libpcl-stereo1.8, libpcl-surface1.8, libpcl-tracking1.8, libpcl-visualization1.8]
 libpcl-all-dev:
   arch: [pcl]
   debian: [libpcl-dev]
@@ -2407,6 +2416,7 @@ libpcl-all-dev:
     xenial: [libpcl-dev]
     yakkety: [libpcl-dev]
     zesty: [libpcl-dev]
+    bionic: [libpcl-dev]
 libpcsclite-dev:
   arch: [pcsclite]
   debian: [libpcsclite-dev]
@@ -2452,6 +2462,7 @@ libpng-dev:
     xenial: [libpng12-dev]
     yakkety: [libpng-dev]
     zesty: [libpng-dev]
+    bionic: [libpng-dev]
 libpng12-dev:
   arch: [libpng]
   debian: [libpng12-dev]
@@ -2985,6 +2996,7 @@ libtiff-dev:
     xenial: [libtiff5-dev]
     yakkety: [libtiff5-dev]
     zesty: [libtiff5-dev]
+    bionic: [libtiff5-dev]
 libtiff4-dev:
   arch: [libtiff]
   debian: [libtiff4-dev]
@@ -3024,6 +3036,7 @@ libtool:
     xenial: [libtool, libltdl-dev, libtool-bin]
     yakkety: [libtool, libltdl-dev, libtool-bin]
     zesty: [libtool, libltdl-dev, libtool-bin]
+    bionic: [libtool, libltdl-dev, libtool-bin]
 libttspico:
   debian: [libttspico-dev, libttspico-data, libttspico-utils, libttspico0]
   ubuntu: [libttspico-dev, libttspico-data, libttspico-utils, libttspico0]
@@ -3244,6 +3257,7 @@ libvtk-java:
     xenial: [libvtk-java]
     yakkety: [libvtk6-java]
     zesty: [libvtk6-java]
+    bionic: [libvtk6-java]
 libvtk-qt:
   arch: [vtk]
   debian:
@@ -3272,6 +3286,7 @@ libvtk-qt:
     xenial: [libvtk6-qt-dev]
     yakkety: [libvtk6-qt-dev]
     zesty: [libvtk6-qt-dev]
+    bionic: [libvtk6-qt-dev]
 libwebp-dev:
   debian: [libwebp-dev]
   fedora: [libwebp-devel]
@@ -4042,6 +4057,7 @@ protobuf:
     xenial: [libprotobuf9v5]
     yakkety: [libprotobuf10]
     zesty: [libprotobuf10]
+    bionic: [libprotobuf10]
 protobuf-dev:
   arch: [protobuf]
   debian: [libprotobuf-dev, protobuf-compiler, libprotoc-dev]
