--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -101,6 +101,7 @@ assimp:
   rhel: [assimp-devel]
   slackware: [assimp]
   ubuntu:
+    artful: [libassimp-dev]
     bionic: [libassimp-dev]
     lucid: [assimp-dev]
     maverick: [assimp-dev]
@@ -126,6 +127,7 @@ assimp-dev:
   rhel: [assimp-devel]
   slackware: [assimp]
   ubuntu:
+    artful: [libassimp-dev]
     bionic: [libassimp-dev]
     lucid: [assimp-dev]
     maverick: [assimp-dev]
@@ -699,6 +701,7 @@ ffmpeg:
   opensuse: [ffmpeg]
   slackware: [ffmpeg]
   ubuntu:
+    artful: [libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
     bionic: [libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
     lucid: [ffmpeg, libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
     maverick: [ffmpeg, libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
@@ -738,6 +741,7 @@ fltk:  # Consider using the libfltk-dev and fluid (fltk runtime) keys instead.
   opensuse: [fltk-devel]
   slackware: [fltk]
   ubuntu:
+    artful: [fluid, libfltk1.3-dev]
     bionic: [fluid, libfltk1.3-dev]
     lucid: [fluid, libfltk1.1-dev]
     maverick: [fluid, libfltk1.1-dev]
@@ -1664,6 +1668,7 @@ libfltk-dev:
   opensuse: [fltk-devel]
   slackware: [fltk]
   ubuntu:
+    artful: [libfltk1.3-dev]
     bionic: [libfltk1.3-dev]
     lucid: [libfltk1.1-dev]
     maverick: [libfltk1.1-dev]
@@ -2035,6 +2040,7 @@ libjpeg:
   opensuse: [libjpeg62-devel]
   slackware: [libjpeg-turbo]
   ubuntu:
+    artful: [libjpeg-dev]
     bionic: [libjpeg-dev]
     lucid: [libjpeg62-dev]
     maverick: [libjpeg62-dev]
@@ -2260,6 +2266,7 @@ libogre-dev:
   rhel: [ogre-devel]
   slackware: [ogre]
   ubuntu:
+    artful: [libogre-1.9-dev]
     bionic: [libogre-1.9-dev]
     lucid: [libogre-dev]
     maverick: [libogre-dev]
@@ -2383,6 +2390,7 @@ libpcl-all:
   opensuse: [pcl]
   slackware: [pcl]
   ubuntu:
+    artful: [libpcl-apps1.8, libpcl-common1.8, libpcl-features1.8, libpcl-filters1.8, libpcl-io1.8, libpcl-kdtree1.8, libpcl-keypoints1.8, libpcl-ml1.8, libpcl-octree1.8, libpcl-outofcore1.8, libpcl-people1.8, libpcl-recognition1.8, libpcl-registration1.8, libpcl-sample-consensus1.8, libpcl-search1.8, libpcl-segmentation1.8, libpcl-stereo1.8, libpcl-surface1.8, libpcl-tracking1.8, libpcl-visualization1.8]
     bionic: [libpcl-apps1.8, libpcl-common1.8, libpcl-features1.8, libpcl-filters1.8, libpcl-io1.8, libpcl-kdtree1.8, libpcl-keypoints1.8, libpcl-ml1.8, libpcl-octree1.8, libpcl-outofcore1.8, libpcl-people1.8, libpcl-recognition1.8, libpcl-registration1.8, libpcl-sample-consensus1.8, libpcl-search1.8, libpcl-segmentation1.8, libpcl-stereo1.8, libpcl-surface1.8, libpcl-tracking1.8, libpcl-visualization1.8]
     precise: [libpcl-1.7-all]
     quantal: [libpcl-1.7-all]
@@ -2405,6 +2413,7 @@ libpcl-all-dev:
   opensuse: [pcl]
   slackware: [pcl]
   ubuntu:
+    artful: [libpcl-dev]
     bionic: [libpcl-dev]
     precise: [libpcl-1.7-all-dev]
     quantal: [libpcl-1.7-all-dev]
@@ -2451,6 +2460,7 @@ libpng-dev:
   opensuse: [libpng12-devel]
   slackware: [libpng]
   ubuntu:
+    artful: [libpng-dev]
     bionic: [libpng-dev]
     precise: [libpng12-dev]
     quantal: [libpng12-dev]
@@ -2980,6 +2990,7 @@ libtiff-dev:
     slackpkg:
       packages: [libtiff]
   ubuntu:
+    artful: [libtiff5-dev]
     bionic: [libtiff5-dev]
     lucid: [libtiff4-dev]
     maverick: [libtiff4-dev]
@@ -3021,6 +3032,7 @@ libtool:
   rhel: [libtool, libtool-ltdl-devel]
   slackware: [libtool]
   ubuntu:
+    artful: [libtool, libltdl-dev, libtool-bin]
     bionic: [libtool, libltdl-dev, libtool-bin]
     lucid: [libtool, libltdl-dev]
     maverick: [libtool, libltdl-dev]
@@ -3245,6 +3257,7 @@ libvtk-java:
   opensuse: [vtk-java]
   slackware: [VTK]
   ubuntu:
+    artful: [libvtk6-java]
     bionic: [libvtk6-java]
     lucid: [libvtk-java]
     precise: [libvtk-java]
@@ -3271,6 +3284,7 @@ libvtk-qt:
   opensuse: [vtk-qt]
   slackware: [VTK]
   ubuntu:
+    artful: [libvtk6-qt-dev]
     bionic: [libvtk6-qt-dev]
     lucid: [libvtk5-qt4-dev]
     maverick: [libvtk5-qt4-dev]
@@ -4047,6 +4061,7 @@ protobuf:
   opensuse: [libprotobuf9]
   slackware: [protobuf]
   ubuntu:
+    artful: [libprotobuf10]
     bionic: [libprotobuf10]
     precise: [libprotobuf7]
     raring: [libprotobuf7]
