--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -166,6 +166,19 @@ repositories:
       url: https://github.com/ros/common_msgs.git
       version: jade-devel
     status: maintained
+  common_tutorials:
+    release:
+      packages:
+      - actionlib_tutorials
+      - common_tutorials
+      - nodelet_tutorial_math
+      - pluginlib_tutorials
+      - turtle_actionlib
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/common_tutorials-release.git
+      version: 0.1.11-0
+    status: maintained
   control_msgs:
     doc:
       type: git
