Add python-chainer-mask-rcnn-pip entry

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -577,6 +577,23 @@ python-certifi:
     xenial: [python-certifi]
     yakkety: [python-certifi]
     zesty: [python-certifi]
+python-chainer-mask-rcnn-pip:
+  debian:
+    pip:
+      depends: [cython, python-numpy]
+      packages: [chainer-mask-rcnn]
+  fedora:
+    pip:
+      depends: [cython, python-numpy]
+      packages: [chainer-mask-rcnn]
+  osx:
+    pip:
+      depends: [cython, python-numpy]
+      packages: [chainer-mask-rcnn]
+  ubuntu:
+    pip:
+      depends: [cython, python-numpy]
+      packages: [chainer-mask-rcnn]
 python-chainer-pip:
   debian:
     pip:
