--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -213,7 +213,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/dynamic_reconfigure.git
-      version: melodic-devel
+      version: master
     release:
       tags:
         release: release/melodic/{package}/{version}
@@ -223,7 +223,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/dynamic_reconfigure.git
-      version: melodic-devel
+      version: master
     status: maintained
   eigen_stl_containers:
     doc:
