--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -878,6 +878,21 @@ repositories:
       url: https://github.com/davetcoleman/cartesian_msgs.git
       version: jade-devel
     status: maintained
+  cartographer:
+    doc:
+      type: git
+      url: https://github.com/googlecartographer/cartographer.git
+      version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-gbp/cartographer-release.git
+      version: 0.2.0-1
+    source:
+      type: git
+      url: https://github.com/googlecartographer/cartographer.git
+      version: master
+    status: developed
   catch_ros:
     doc:
       type: git
