geometry_tutorials: 0.2.2-0 in 'melodic/distribution.yaml' [bloom] (#17349)

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -416,6 +416,26 @@ repositories:
       url: https://github.com/ros/geometry2.git
       version: melodic-devel
     status: maintained
+  geometry_tutorials:
+    doc:
+      type: git
+      url: https://github.com/ros/geometry_tutorials.git
+      version: indigo-devel
+    release:
+      packages:
+      - geometry_tutorials
+      - turtle_tf
+      - turtle_tf2
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/geometry_tutorials-release.git
+      version: 0.2.2-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/geometry_tutorials.git
+      version: indigo-devel
+    status: maintained
   gl_dependency:
     doc:
       type: git
