added libtclap-dev to base.yaml (now rebased) (#17346)
* added libtclap-dev to base.yaml

* fixed order.

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2957,6 +2957,13 @@ libswscale-dev:
   fedora: [ffmpeg-devel]
   gentoo: [virtual/ffmpeg]
   ubuntu: [libswscale-dev]
+libtclap-dev:
+  arch: [tclap]
+  debian: [libtclap-dev]
+  fedora: [tclap]
+  gentoo: [dev-cpp/tclap]
+  macports: [tclap]
+  ubuntu: [libtclap-dev]
 libtesseract:
   debian: [libtesseract-dev]
   fedora: [tesseract-devel]
