Added python-poster key to rosdep python.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2165,6 +2165,9 @@ python-plyfile-pip:
   ubuntu:
     pip:
       packages: [plyfile]
+python-poster:
+  debian: [python-poster]
+  ubuntu: [python-poster]
 python-progressbar:
   debian: [python-progressbar]
   fedora: [python-progressbar]
