json_transport: 0.0.1-0 in 'lunar/distribution.yaml' [bloom] (#17369)
* json_transport: 0.0.1-0 in 'lunar/distribution.yaml' [bloom]

* Remove test_pull_requests

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1376,6 +1376,24 @@ repositories:
       url: https://github.com/jsk-ros-pkg/jsk_common_msgs.git
       version: master
     status: developed
+  json_transport:
+    doc:
+      type: git
+      url: https://github.com/locusrobotics/json_transport.git
+      version: devel
+    release:
+      packages:
+      - json_msgs
+      - json_transport
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/locusrobotics/json_transport-release.git
+      version: 0.0.1-0
+    source:
+      type: git
+      url: https://github.com/locusrobotics/json_transport.git
+      version: devel
+    status: developed
   katana_driver:
     doc:
       type: git
