Add libglew and libopencv to Ubuntu artful

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1795,6 +1795,7 @@ libglew-dev:
   fedora: [glew-devel]
   gentoo: [media-libs/glew]
   ubuntu:
+    artful: [libglew-dev]
     bionic: [libglew-dev]
     oneiric: [libglew1.5-dev]
     precise: [libglew1.6-dev]
@@ -2302,6 +2303,7 @@ libopencv-dev:
   gentoo: [media-libs/opencv]
   macports: [opencv]
   ubuntu:
+    artful: [libopencv-dev]
     bionic: [libopencv-dev]
     saucy: [libopencv-dev]
     trusty: [libopencv-dev]
