liblog4cxx10-dev has been removed from bionic

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3507,7 +3507,24 @@ log4cxx:
   opensuse: [liblog4cxx-devel]
   rhel: [log4cxx-devel]
   slackware: [apache-log4cxx]
-  ubuntu: [liblog4cxx10-dev]
+  ubuntu:
+    artful: [liblog4cxx-dev]
+    bionic: [liblog4cxx-dev]
+    lucid: [liblog4cxx10-dev]
+    maverick: [liblog4cxx10-dev]
+    natty: [liblog4cxx10-dev]
+    oneiric: [liblog4cxx10-dev]
+    precise: [liblog4cxx10-dev]
+    quantal: [liblog4cxx10-dev]
+    raring: [liblog4cxx10-dev]
+    saucy: [liblog4cxx10-dev]
+    trusty: [liblog4cxx10-dev]
+    utopic: [liblog4cxx10-dev]
+    vivid: [liblog4cxx10-dev]
+    wily: [liblog4cxx10-dev]
+    xenial: [liblog4cxx10-dev]
+    yakkety: [liblog4cxx10-dev]
+    zesty: [liblog4cxx10-dev]
 lttng-modules:
   arch: [lttng-modules]
   debian: [lttng-modules-dkms]
