imu_compass: 0.0.5-0 in 'kinetic/distribution.yaml' [bloom] (#17397)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3487,6 +3487,21 @@ repositories:
       url: https://github.com/HUAJIEIMI/imi_ros.git
       version: master
     status: developed
+  imu_compass:
+    doc:
+      type: git
+      url: https://github.com/clearpathrobotics/imu_compass.git
+      version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/clearpath-gbp/imu_compass-release.git
+      version: 0.0.5-0
+    source:
+      type: git
+      url: https://github.com/clearpathrobotics/imu_compass.git
+      version: master
+    status: maintained
   imu_pipeline:
     doc:
       type: git
