--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -266,6 +266,7 @@ python-amqp:
   gentoo: [dev-python/py-amqp]
   ubuntu: [python-amqp]
 python-aniso8601:
+  centos: [python-aniso8601]
   debian: [python-aniso8601]
   fedora: [python2-aniso8601]
   ubuntu: [python-aniso8601]
