Add pacifica-dbw-ros to documentation index for distro

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6533,7 +6533,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/NewEagleRaptor/pacifica-dbw-ros.git
-      version: default
+      version: master
     source:
       test_commits: false
       type: git
