Renaming robot_process to robot_activity

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11133,6 +11133,17 @@ repositories:
       url: https://gitlab.com/nasa-jsc-robotics/robodyn_utilities.git
       version: develop
     status: maintained
+  robot_activity:
+    doc:
+      type: git
+      url: https://github.com/snt-robotics/robot_activity.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/snt-robotics/robot_activity.git
+      version: master
+    status: developed
   robot_calibration:
     doc:
       type: git
@@ -11242,17 +11253,6 @@ repositories:
       url: https://github.com/GT-RAIL/robot_pose_publisher.git
       version: develop
     status: maintained
-  robot_process:
-    doc:
-      type: git
-      url: https://github.com/snt-robotics/robot_process.git
-      version: master
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/snt-robotics/robot_process.git
-      version: master
-    status: developed
   robot_self_filter:
     release:
       tags:
