adding robot_activity (source+doc) to jade,kinetic,lunar,melodic

--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -5227,6 +5227,17 @@ repositories:
       url: https://github.com/GT-RAIL/rmp_msgs.git
       version: develop
     status: maintained
+  robot_activity:
+    doc:
+      type: git
+      url: https://github.com/snt-robotics/robot_activity.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/snt-robotics/robot_activity.git
+      version: master
+    status: developed
   robot_calibration:
     doc:
       type: git
