--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2745,6 +2745,17 @@ repositories:
       url: https://github.com/ros-drivers/rgbd_launch.git
       version: jade-devel
     status: maintained
+  robot_activity:
+    doc:
+      type: git
+      url: https://github.com/snt-robotics/robot_activity.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/snt-robotics/robot_activity.git
+      version: master
+    status: developed
   robot_localization:
     doc:
       type: git
