--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7950,6 +7950,17 @@ repositories:
       url: https://github.com/ridgeback/ridgeback_simulator.git
       version: kinetic-devel
     status: maintained
+  robot_activity:
+    doc:
+      type: git
+      url: https://github.com/snt-robotics/robot_activity.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/snt-robotics/robot_activity.git
+      version: master
+    status: developed
   robot_calibration:
     doc:
       type: git
