Renaming robot_process to robot_activity and adding to kinetic,lunar,melodic (#17492)
* Renaming robot_process to robot_activity

* adding robot_activity (source+doc) to jade,kinetic,lunar,melodic

* removing jade due to EOL

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1009,6 +1009,17 @@ repositories:
       url: https://github.com/ros/resource_retriever.git
       version: kinetic-devel
     status: maintained
+  robot_activity:
+    doc:
+      type: git
+      url: https://github.com/snt-robotics/robot_activity.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/snt-robotics/robot_activity.git
+      version: master
+    status: developed
   robot_state_publisher:
     doc:
       type: git
