--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -13980,6 +13980,12 @@ repositories:
       url: https://github.com/fzi-forschungszentrum-informatik/schunk_svh_driver.git
       version: master
     status: maintained
+  scratch4robots:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/JdeRobot/Scratch4Robots.git
+      version: 0.0.1-0
   screenrun:
     doc:
       type: git
