--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10293,6 +10293,12 @@ repositories:
       url: https://github.com/fzi-forschungszentrum-informatik/schunk_svh_driver.git
       version: master
     status: developed
+  scratch4robots:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/JdeRobot/Scratch4Robots.git
+      version: 0.0.1-0
   segway_rmp:
     doc:
       type: git
