added L-CAS nav branch

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -117,6 +117,13 @@ repositories:
       url: https://gitsvn-nt.oru.se/marc-hanheide/kmo_interfaces.git
       version: master
     status: developed
+  lcas_nav_branch:
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/strands-project/navigation.git
+      version: han_dwa_only_kinetic
+    status: developed
   lcas_teaching:
     release:
       packages:
