Add python-crypto for Ubuntu Bionic.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -783,6 +783,8 @@ python-crypto:
   ubuntu:
     artful: [python-crypto]
     artful_python3: [python3-crypto]
+    bionic: [python-crypto]
+    bionic_python3: [python3-crypto]
     lucid: [python-crypto]
     maverick: [python-crypto]
     natty: [python-crypto]
