mcl_3dl: 0.1.1-0 in 'indigo/distribution.yaml' [bloom] (#17605)

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -6919,6 +6919,21 @@ repositories:
       type: git
       url: https://github.com/mikeferguson/maxwell.git
       version: indigo-devel
+  mcl_3dl:
+    doc:
+      type: git
+      url: https://github.com/at-wat/mcl_3dl.git
+      version: master
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/at-wat/mcl_3dl-release.git
+      version: 0.1.1-0
+    source:
+      type: git
+      url: https://github.com/at-wat/mcl_3dl.git
+      version: master
+    status: developed
   md49_base_controller:
     doc:
       type: git
