add scratch4robots:0.0.1-0 in 'kinetic/distribution.yaml' (#17617)
* add scratch4robots:0.0.1-0 in 'kinetic/distribution.yaml'

* Update distribution.yaml

* Update distribution.yaml

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10640,6 +10640,20 @@ repositories:
       url: https://github.com/fzi-forschungszentrum-informatik/schunk_svh_driver.git
       version: master
     status: developed
+  scratch4robots:
+    doc:
+      type: git
+      url: https://github.com/JdeRobot/Scratch4Robots.git
+      version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/JdeRobot/Scratch4Robots-release.git
+      version: 0.0.1-0
+    source:
+      type: git
+      url: https://github.com/JdeRobot/Scratch4Robots.git
+      version: master
   segway_rmp:
     doc:
       type: git
