[melodic] Use melodic-devel for ros_controllers

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1241,11 +1241,11 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-controls/ros_controllers.git
-      version: kinetic-devel
+      version: melodic-devel
     source:
       type: git
       url: https://github.com/ros-controls/ros_controllers.git
-      version: kinetic-devel
+      version: melodic-devel
     status: maintained
   ros_emacs_utils:
     doc:
