cartographer_ros: 0.2.0-0 in 'kinetic/distribution.yaml' [bloom] (#17640)
* cartographer_ros: 0.2.0-0 in 'kinetic/distribution.yaml' [bloom]

* Remove source section

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -953,6 +953,21 @@ repositories:
       url: https://github.com/ros-gbp/cartographer-release.git
       version: 0.2.0-2
     status: developed
+  cartographer_ros:
+    doc:
+      type: git
+      url: https://github.com/googlecartographer/cartographer_ros.git
+      version: 0.2.0
+    release:
+      packages:
+      - cartographer_ros
+      - cartographer_ros_msgs
+      - cartographer_rviz
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-gbp/cartographer_ros-release.git
+      version: 0.2.0-0
+    status: developed
   catch_ros:
     doc:
       type: git
