changed iliad_smp to v0.1.0 branch

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -98,7 +98,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://gitsvn-nt.oru.se/palmieri/iliad_smp.git
-      version: master
+      version: v0.1.0-branch
     status: developed
   kmo_interfaces:
     release:
