gz_ros2_control: 1.2.3-1 in 'jazzy/distribution.yaml' [bloom] (#41178)
* gz_ros2_control: 1.2.3-1 in 'jazzy/distribution.yaml' [bloom]

* change branch and remove gz_ros2_control_test

Signed-off-by: Alejandro Hernández Cordero <ahcorde@gmail.com>

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -2199,7 +2199,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-controls/gz_ros2_control.git
-      version: master
+      version: jazzy
     release:
       packages:
       - gz_ros2_control
@@ -2207,10 +2207,11 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/ign_ros2_control-release.git
+      version: 1.2.3-1
     source:
       type: git
       url: https://github.com/ros-controls/gz_ros2_control.git
-      version: master
+      version: jazzy
     status: maintained
   gz_sensors_vendor:
     doc:
