Add `yourdfpy` to Python rosdeps (#41102)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9959,6 +9959,10 @@ python3-yolov5:
   ubuntu:
     pip:
       packages: [yolov5]
+python3-yourdfpy-pip:
+  '*':
+    pip:
+      packages: [yourdfpy]
 python3-zmq:
   arch: [python-pyzmq]
   debian: [python3-zmq]
