--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -407,7 +407,7 @@ repositories:
       type: git
       url: https://github.com/autoware-ai/messages.git
       version: master
-    status: maintained
+    status: end-of-life
   auv_msgs:
     doc:
       type: git
