updated jazzy branches point_cloud_transport_plugins
Signed-off-by: Alejandro Hernández Cordero <ahcorde@gmail.com>

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4462,7 +4462,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-perception/point_cloud_transport_plugins.git
-      version: rolling
+      version: jazzy
     release:
       packages:
       - draco_point_cloud_transport
@@ -4478,7 +4478,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros-perception/point_cloud_transport_plugins.git
-      version: rolling
+      version: jazzy
     status: maintained
   point_cloud_transport_tutorial:
     doc:
