--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8424,6 +8424,16 @@ python3-pyvista-pip:
   ubuntu:
     pip:
       packages: [pyvista]
+python3-pyxb-x-pip:
+  debian:
+    pip:
+      packages: [PyXB-X]
+  osx:
+    pip:
+      packages: [PyXB-X]
+  ubuntu:
+    pip:
+      packages: [PyXB-X]
 python3-pyxdg-pip:
   debian:
     pip:
