--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8424,6 +8424,10 @@ python3-pyvista-pip:
   ubuntu:
     pip:
       packages: [pyvista]
+python3-pyxb-x-pip:
+  '*':
+    pip:
+      packages: [PyXB-X]
 python3-pyxdg-pip:
   debian:
     pip:
