add openeb_vendor to humble,iron,rolling,jazzy (#41272)

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -4130,6 +4130,16 @@ repositories:
         release: release/iron/{package}/{version}
       url: https://github.com/ros2-gbp/ompl-release.git
       version: 1.5.2-4
+  openeb_vendor:
+    doc:
+      type: git
+      url: https://github.com/ros-event-camera/openeb_vendor.git
+      version: iron
+    source:
+      type: git
+      url: https://github.com/ros-event-camera/openeb_vendor.git
+      version: iron
+    status: developed
   openni2_camera:
     doc:
       type: git
