--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4043,6 +4043,16 @@ repositories:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/ompl-release.git
       version: 1.5.2-2
+  openeb_vendor:
+    doc:
+      type: git
+      url: https://github.com/ros-event-camera/openeb_vendor.git
+      version: jazzy
+    source:
+      type: git
+      url: https://github.com/ros-event-camera/openeb_vendor.git
+      version: jazzy
+    status: developed
   openni2_camera:
     doc:
       type: git
