Add situational_graphs_msgs to rosdistro (#40801)
* Add s_graphs_msgs to rosdistro

* Rename s_graphs_msgs->situational_graphs_msgs

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8639,6 +8639,12 @@ repositories:
       url: https://github.com/clearpathrobotics/simple-term-menu.git
       version: humble
     status: developed
+  situational_graphs_msgs:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_msgs.git
+      version: main
+    status: maintained
   slam_toolbox:
     doc:
       type: git
