--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7181,6 +7181,12 @@ repositories:
       url: https://github.com/oKermorgant/simple_launch.git
       version: devel
     status: maintained
+  situational_graphs_msgs:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_msgs.git
+      version: main
+    status: maintained
   slam_toolbox:
     doc:
       type: git
