add urchin and pyrender pip dependencies to python.yaml (#41311)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8204,6 +8204,10 @@ python3-pyqtgraph:
   gentoo: [dev-python/pyqtgraph]
   nixos: [python3Packages.pyqtgraph]
   ubuntu: [python3-pyqtgraph]
+python3-pyrender-pip:
+  '*':
+    pip:
+      packages: [pyrender]
 python3-pyro-ppl-pip:
   debian:
     pip:
@@ -9687,6 +9691,10 @@ python3-unidiff:
   opensuse: [python-unidiff]
   rhel: [python3-unidiff]
   ubuntu: [python3-unidiff]
+python3-urchin-pip:
+  '*':
+    pip:
+      packages: [urchin]
 python3-urdfpy-pip:
   debian:
     pip:
