Add python3-asn1tools to rosdep (#41262)
* Add pyhton3-asn1tools-pip to rosdep/python.yaml

* Add pyhton3-asn1tools-pip to rosdep/python.yaml with OS-level wildcard

Co-authored-by: Scott K Logan <logans@cottsay.net>

---------

Co-authored-by: Scott K Logan <logans@cottsay.net>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4922,6 +4922,10 @@ python3-argcomplete:
   openembedded: [python3-argcomplete@meta-python]
   rhel: ['python%{python3_pkgversion}-argcomplete']
   ubuntu: [python3-argcomplete]
+python3-asn1tools-pip:
+  '*':
+    pip:
+      packages: [asn1tools]
 python3-astropy-pip:
   debian:
     pip:
