add whill and whill_msgs to humble (#41357)
* add whill to humble

* add whill_msgs to humble

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -10361,6 +10361,26 @@ repositories:
       url: https://github.com/TechMagicKK/weight_scale_interfaces.git
       version: main
     status: maintained
+  whill:
+    doc:
+      type: git
+      url: https://github.com/whill-labs/ros2_whill.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/whill-labs/ros2_whill.git
+      version: humble
+    status: developed
+  whill_msgs:
+    doc:
+      type: git
+      url: https://github.com/whill-labs/ros2_whill_interfaces.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/whill-labs/ros2_whill_interfaces.git
+      version: humble
+    status: developed
   wireless:
     doc:
       type: git
