add create3_examples (#41397)
Co-authored-by: Alberto Soragna <asoragna@irobot.com>

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -1327,6 +1327,12 @@ repositories:
       url: https://github.com/rt-net/crane_plus.git
       version: humble-devel
     status: maintained
+  create3_examples:
+    source:
+      type: git
+      url: https://github.com/iRobotEducation/create3_examples.git
+      version: humble
+    status: developed
   create3_sim:
     release:
       packages:
