Add graph_datasets to rosdistro (#40803)
* Add graph datasets

* Rename graph_datasets->situational_graph_datasets

* Fix name typo

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7199,6 +7199,12 @@ repositories:
       url: https://github.com/oKermorgant/simple_launch.git
       version: devel
     status: maintained
+  situational_graphs_datasets:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_datasets.git
+      version: develop
+    status: maintained
   situational_graphs_msgs:
     source:
       type: git
