--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8675,6 +8675,12 @@ repositories:
       url: https://github.com/clearpathrobotics/simple-term-menu.git
       version: humble
     status: developed
+  situational_graphs_datasets:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_datasets.git
+      version: develop
+    status: maintained
   situational_graphs_msgs:
     source:
       type: git
