openeb_vendor: 1.1.0-1 in 'humble/distribution.yaml' [bloom] (#41419)

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5193,6 +5193,11 @@ repositories:
       type: git
       url: https://github.com/ros-event-camera/openeb_vendor.git
       version: humble
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/openeb_vendor-release.git
+      version: 1.1.0-1
     source:
       type: git
       url: https://github.com/ros-event-camera/openeb_vendor.git
