--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -2775,6 +2775,16 @@ repositories:
       url: https://github.com/ros-perception/laser_geometry.git
       version: rolling
     status: maintained
+  laser_segmentation:
+    doc:
+      type: git
+      url: https://github.com/ajtudela/laser_segmentation.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/ajtudela/laser_segmentation.git
+      version: main
+    status: maintained
   laser_proc:
     doc:
       type: git
@@ -7054,6 +7064,16 @@ repositories:
       type: git
       url: https://github.com/oKermorgant/slider_publisher.git
       version: ros2
+    status: maintained
+  slg_msgs:
+    doc:
+      type: git
+      url: https://github.com/ajtudela/slg_msgs.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/ajtudela/slg_msgs.git
+      version: main
     status: maintained
   smach:
     doc:
