Add matio-devel for RHEL 9
Cf. https://rhel.pkgs.org/9/epel-x86_64/matio-devel-1.5.27-1.el9.x86_64.rpm.html

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6846,6 +6846,7 @@ matio:
   rhel:
     '*': null
     '8': [matio-devel]
+    '9': [matio-devel]
   ubuntu: [libmatio-dev]
 maven:
   alpine: [maven]
