depthai: 2.26.0-1 in 'jazzy/distribution.yaml' [bloom] (#41440)

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1099,6 +1099,17 @@ repositories:
       url: https://github.com/ros2/demos.git
       version: jazzy
     status: developed
+  depthai:
+    doc:
+      type: git
+      url: https://github.com/luxonis/depthai-core.git
+      version: ros-release
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/luxonis/depthai-core-release.git
+      version: 2.26.0-1
+    status: developed
   depthimage_to_laserscan:
     doc:
       type: git
